# minibot

./: .gitignore  LICENSE  README.md  battery.py  image.py  led_blinky.py  minibot.py  minibot__old_shield.py  powermonitor.py  powerswitch.sh  shapes.py  text.py
3D-Model/: minibot.skp  minibot~.skp
ROS/catkin_workspace/src/chapter3_tutorials/: CMakeLists.txt
circuit/: gpio-numbers-pi3 belegung.afdesign  minibot-cache.lib  minibot.plt  minibot.pro  minibot.sch
circuit/user defined components/: SFH9202.dcm  SFH9202.lib  adafruit_ads1015.dcm  (+5 more)
misc/: voltage divider.xlsx
raspi/: .bashrc  NetworkManager.conf  config.txt  dhcpcd.conf  dhcpcd_test.conf  etc_NetworkManager_system-connections_markus-wlan  etc_NetworkManager_system-connections_robotiklabor-lan  etc__NetworkManager__system-connections__markus-lan  etc__NetworkManager__system-connections__markus-wlan-mobil  etc__hostname  etc__init.d__minibot-battery-check  etc__init.d__minibot-boot  etc__init.d__minibot-off  etc__init.d__minibot-oled  etc__init.d__minibot-powermonitor  etc__init.d__minibot-reboot  etc__rc.local  etc__systemd__system__minibot-ros-start.service  etc_udev_rules.d_70-usb-laser.rules  i2c_lcd.txt  interfaces  minibot-ros-start  minibot-ros-start.sh  motd  motd_test
test/: MCP3008.py  README.md  battery.py  battery_MCP3008.py  battery_lcd.py  beep.py  buttontest.py  cpu_temp.py  encodertest.py  hostinfo.py  keycode.py  lcd_test.py  lcd_text.py  led_blinky.py  melody.py  minibot.py  motor_test.py  motortest.py  piezo.py  power_monitor.py  powermonitor.py  powerswitch.sh  shapes.py
(+84 files in other folders)
